added initial height on stone throw

--- a/notebooks/testify.ipynb
+++ b/notebooks/testify.ipynb
@@ -111,8 +111,9 @@
         "theta_i = Value(18.3, \"degree\")\n",
         "x_f = Value(30.5, \"meter\")\n",
         "mass = Value(0.43, \"kilogram\")\n",
+        "initial_height = Value(1.2, \"meter\")\n",
         "\n",
-        "statement = fr\"Joseph Fourier tosses a stone of mass of {mass} with a speed of {v_i} at an angle of {theta_i} degrees above the horizontal towards a wall that is {x_f} away.\"\n",
+        "statement = fr\"Joseph Fourier tosses a stone of mass of {mass} with a speed of {v_i} at an angle of {theta_i} degrees above the horizontal from a height of {initial_height} towards a wall that is {x_f} away.\"\n",
         "\n",
         "questions = [\n",
         "    Question(\"Create and draw a well labeled diagram of the situation. Be sure to include all known and unknown quantities.\", 20),\n",
@@ -735,7 +736,7 @@
               "\n",
               " <div>\n",
               "\n",
-              " Joseph Fourier tosses a stone of mass of $0.430 \\mathrm{kg}$ with a speed of $26.8 \\frac{\\mathrm{m}}{\\mathrm{s}}$ at an angle of $18.3 ^\\circ$ degrees above the horizontal towards a wall that is $30.5 \\mathrm{m}$ away. \n",
+              " Joseph Fourier tosses a stone of mass of $0.430 \\mathrm{kg}$ with a speed of $26.8 \\frac{\\mathrm{m}}{\\mathrm{s}}$ at an angle of $18.3 ^\\circ$ degrees above the horizontal from a height of $1.20 \\mathrm{m}$ towards a wall that is $30.5 \\mathrm{m}$ away. \n",
               "\n",
               "</div><div class='question'><p><div class='question_info'> \n",
               "\n",
