--- a/notebooks/rotational.ipynb
+++ b/notebooks/rotational.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {
     "id": "wXCPia2cXnR5"
    },
@@ -11,6 +11,7 @@
     "from testifyr import WorkProblem, Question, Test, MultipleChoiceProblem, Choice, Bonus, Information\n",
     "from stuff import Value, Unit\n",
     "import numpy as np\n",
+    "import sympy as sp\n",
     "from pprint import pprint as pp\n",
     "import base64\n",
     "\n",
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +59,7 @@
        "\"<div class='problem'><p>\\n\\n <div>\\n\\n Two wheels (same mass, same radius, same width) are rolled without slipping down an incline. Wheel A is a solid disk and wheel B is a hoop. Which wheel reaches the bottom first? \\n\\n \\n\\n</div><ol>\\n<li class='choice'>\\n\\n <div class='choice'>\\n\\n Wheel A \\n\\n</div> \\n\\n</li><li class='choice'>\\n\\n <div class='choice'>\\n\\n Wheel B \\n\\n</div> \\n\\n</li><li class='choice'>\\n\\n <div class='choice'>\\n\\n They reach the bottom at the same time \\n\\n</div> \\n\\n</li><li class='choice'>\\n\\n <div class='choice'>\\n\\n It depends on the incline angle \\n\\n</div> \\n\\n</li></ol>\\n \\n\\n</p></div>\""
       ]
      },
-     "execution_count": 15,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,9 +199,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<style>.spaceBox {\n",
+       "    border: 2px solid black;\n",
+       "    width: 100%;\n",
+       "    box-sizing: border-box;\n",
+       "    line-height: 1em;\n",
+       "    height: calc(1em * 10);\n",
+       "    page-break-inside: avoid;\n",
+       "}\n",
+       "\n",
+       ".problem {\n",
+       "    font-size: 1em;\n",
+       "    page-break-inside: avoid;\n",
+       "    padding-left: 0.5em;\n",
+       "    padding-right: 0.5em;\n",
+       "    padding-top: 0.1em;\n",
+       "    padding-bottom: 0.1em;\n",
+       "}\n",
+       "\n",
+       ".problem_info {\n",
+       "    font-size: 1.2em;\n",
+       "    font-weight: bold;\n",
+       "}\n",
+       "\n",
+       ".question {\n",
+       "    font-size: 1em;\n",
+       "    page-break-inside: avoid;\n",
+       "}\n",
+       "\n",
+       ".question_info {\n",
+       "    font-size: 0.8em;\n",
+       "    font-weight: bold;\n",
+       "}\n",
+       "\n",
+       ".extra_info {\n",
+       "    font-size: 0.8em;\n",
+       "    font-weight: bold;\n",
+       "    width: 50%;\n",
+       "    text-align: center;\n",
+       "    border: 2px solid black;\n",
+       "    margin: 1em;\n",
+       "    padding: 1em;\n",
+       "}\n",
+       "\n",
+       ".extra_item {\n",
+       "    font-size: 1.1em;\n",
+       "}\n",
+       "\n",
+       ".bonus {\n",
+       "    page-break-inside: avoid;\n",
+       "    border: 2px solid black;\n",
+       "    font-size: 1em;\n",
+       "    margin-top: 1em;\n",
+       "    margin-bottom: 1em;\n",
+       "    margin-left: 1.5em;\n",
+       "    margin-right: 1.5em;\n",
+       "    padding: 0.2em\n",
+       "}\n",
+       "\n",
+       ".bonus_info {\n",
+       "    font-size: 1.2em;\n",
+       "    font-weight: bold;\n",
+       "}\n",
+       "\n",
+       ".problem ol {\n",
+       "    list-style-type: upper-alpha;\n",
+       "}\n",
+       "\n",
+       ".problem img {\n",
+       "    max-width: 100%;\n",
+       "    height: 15em;\n",
+       "}\n",
+       "\n",
+       ".problem .svg_container {\n",
+       "    display: flex;\n",
+       "    justify-content: center;\n",
+       "    max-width: 100%;\n",
+       "    height: 13em;\n",
+       "}\n",
+       "\n",
+       ".fig_space_container {\n",
+       "    display: flex;\n",
+       "    justify-content: center;\n",
+       "    margin-top: 1em;\n",
+       "    margin-bottom: 1em;\n",
+       "}\n",
+       "\n",
+       ".fig_space_container .img_container {\n",
+       "    min-width: 33%;\n",
+       "    display: flex;\n",
+       "    justify-content: center;\n",
+       "}\n",
+       "\n",
+       ".spacer_span {\n",
+       "    width: 5em;\n",
+       "    display: inline-block;\n",
+       "    border-bottom: 1px solid black;\n",
+       "}\n",
+       "\n",
+       ".test_info_box {\n",
+       "    font-size: 0.8em;\n",
+       "    border: 1px solid black;\n",
+       "    text-align: center;\n",
+       "    height: 4em;\n",
+       "    display: flex;\n",
+       "}\n",
+       "\n",
+       ".test_info {\n",
+       "    align-self: flex-end;\n",
+       "}\n",
+       "\n",
+       ".choice_correct {\n",
+       "    background-color: lightgreen;\n",
+       "    font-weight: bold;\n",
+       "}\n",
+       "\n",
+       ".choice_incorrect {\n",
+       "    color: red;\n",
+       "}\n",
+       "\n",
+       ".svg_container {\n",
+       "    display: flex;\n",
+       "    justify-content: center;\n",
+       "}</style><div class='problem'><p>\n",
+       "\n",
+       " <div>\n",
+       "\n",
+       " A rubber ball (solid sphere) with a diameter of $0.314 \\mathrm{m}$ is rolling without slipping with an initial linear speed $v=5.00 \\frac{\\mathrm{m}}{\\mathrm{s}}$ from the top of a hill, $325. \\mathrm{m}$ high, to the bottom. \n",
+       "\n",
+       " \n",
+       "\n",
+       "</div><div class='question'><p><div class='question_info'> \n",
+       "\n",
+       " Question #1 (3 points) </div> \n",
+       "\n",
+       " <p>\n",
+       "\n",
+       " Draw a diagram showing this situation. Include a before and after picture labeling all relevant quantities. \n",
+       "\n",
+       "</p> \n",
+       "\n",
+       " <div class=\"fig_space_container\">\n",
+       "        <div\n",
+       "                        class=\"spaceBox\"\n",
+       "                        style=\"height: calc(1em * 15); display: default; background-color: lightgreen\"\n",
+       "                    >\n",
+       "\n",
+       "\n",
+       "\n",
+       "</div></div> \n",
+       "\n",
+       "</p></div><div class='question'><p><div class='question_info'> \n",
+       "\n",
+       " Question #2 (3 points) </div> \n",
+       "\n",
+       " <p>\n",
+       "\n",
+       " Derive an equation for the total kinetic energy in terms of $m$ and $v$. \n",
+       "\n",
+       "</p> \n",
+       "\n",
+       " <div class=\"fig_space_container\">\n",
+       "        <div\n",
+       "                        class=\"spaceBox\"\n",
+       "                        style=\"height: calc(1em * 9); display: default; background-color: lightgreen\"\n",
+       "                    >\n",
+       "\n",
+       "Total Kinetic Energy $K=\\frac{1}{2} m v^2 + \\frac{1}{2} I \\omega^2$\n",
+       "\n",
+       "For a solid sphere, $I=\\frac{2}{5} m r^2$. Since the ball is rolling without slipping, $v=\\omega r$\n",
+       "\n",
+       "$K=\\frac{1}{2} m v^2 + \\frac{1}{2} \\frac{2}{5} m r^2 (\\frac{v}{r})^2=\\frac{7}{10} m v^2$\n",
+       "\n",
+       "</div></div> \n",
+       "\n",
+       "</p></div><div class='question'><p><div class='question_info'> \n",
+       "\n",
+       " Question #3 (3 points) </div> \n",
+       "\n",
+       " <p>\n",
+       "\n",
+       " When the ball reaches the bottom of the hill what will its linear speed be? \n",
+       "\n",
+       "</p> \n",
+       "\n",
+       " <div class=\"fig_space_container\">\n",
+       "        <div\n",
+       "                        class=\"spaceBox\"\n",
+       "                        style=\"height: calc(1em * 9); display: default; background-color: lightgreen\"\n",
+       "                    >\n",
+       "\n",
+       "Use conservation of energy: $K_i + U_i = K_f + U_f$\n",
+       "\n",
+       "$\\frac{7}{10} m v_T^2 + m g h = \\frac{7}{10} m v_B^2$\n",
+       "\n",
+       "$v_B = \\sqrt{v_T^2 + \\frac{10}{7} g h} = \\sqrt{5.00 \\frac{\\mathrm{m}}{\\mathrm{s}}^2 + \\frac{10}{7} 9.81 \\frac{\\mathrm{m}}{\\mathrm{s}^{2}} 325. \\mathrm{m}} = 67.7 \\frac{\\mathrm{m}}{\\mathrm{s}}$\n",
+       "\n",
+       "</div></div> \n",
+       "\n",
+       "</p></div><div class='question'><p><div class='question_info'> \n",
+       "\n",
+       " Question #4 (3 points) </div> \n",
+       "\n",
+       " <p>\n",
+       "\n",
+       " What will be the rotational speed of the ball at the bottom of the hill? \n",
+       "\n",
+       "</p> \n",
+       "\n",
+       " <div class=\"fig_space_container\">\n",
+       "        <div\n",
+       "                        class=\"spaceBox\"\n",
+       "                        style=\"height: calc(1em * 9); display: default; background-color: lightgreen\"\n",
+       "                    >\n",
+       "\n",
+       "$\\frac{v}{r}$\n",
+       "\n",
+       "</div></div> \n",
+       "\n",
+       "</p></div> \n",
+       "\n",
+       "</p></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "diameter_ball = Value(0.314, 'm')\n",
     "height_initial = Value(325, 'm')\n",
@@ -210,29 +444,47 @@
     "\n",
     "questions = [\n",
     "    Question(\"Draw a diagram showing this situation. Include a before and after picture labeling all relevant quantities.\", space=15),\n",
-    "    Question(\"Derive an equation for the total kinetic energy in terms of $m$ and $v$.\", space=9),\n",
-    "    Question(\"When the ball reaches the bottom of the hill what will its linear speed be?\", space=9),\n",
-    "    Question(\"What will be the rotational speed of the ball at the bottom of the hill?\", space=9),\n",
+    "    Question(\"Derive an equation for the total kinetic energy in terms of $m$ and $v$.\", space=9,\n",
+    "             answer=\"\\n\\n\".join([\"Total Kinetic Energy $K=\\\\frac{1}{2} m v^2 + \\\\frac{1}{2} I \\\\omega^2$\",\n",
+    "                               \"For a solid sphere, $I=\\\\frac{2}{5} m r^2$. Since the ball is rolling without slipping, $v=\\\\omega r$\",\n",
+    "                                 \"$K=\\\\frac{1}{2} m v^2 + \\\\frac{1}{2} \\\\frac{2}{5} m r^2 (\\\\frac{v}{r})^2=\\\\frac{7}{10} m v^2$\",\n",
+    "\n",
+    "                        ])),\n",
+    "    Question(\"When the ball reaches the bottom of the hill what will its linear speed be?\", space=9,\n",
+    "             answer=\"\\n\\n\".join([\"Use conservation of energy: $K_i + U_i = K_f + U_f$\",\n",
+    "                                 \"$\\\\frac{7}{10} m v_T^2 + m g h = \\\\frac{7}{10} m v_B^2$\",\n",
+    "                                 \"$v_B = \\\\sqrt{v_T^2 + \\\\frac{10}{7} g h} = \" + f\"\\\\sqrt{{{speed_initial:C}^2 + \\\\frac{{10}}{{7}} {g:C} {height_initial:C}}} = {np.power(np.power(speed_initial, 2) + (10/7) * g * height_initial, 1/2):C}$\"\n",
+    "                        ])),\n",
+    "    Question(\"What will be the rotational speed of the ball at the bottom of the hill?\", space=9,\n",
+    "             answer=\"$\\\\frac{v}{r}$\"),\n",
     "]\n",
     "wp = WorkProblem(statement=statement, questions=questions)\n",
     "problems.append(wp)\n",
-    "#wp.show(answers=True)\n"
+    "wp.show(answers=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P-01-MC(3)\tP-02-MC(3)\tP-03-MC(3)\tP-04-BN(3)\tP-05-MC(3)\tP-06-MC(3)\tP-07-W0(3)\tP-08-W0(3)\tP-08-W1(3)\tP-08-W2(3)\tP-08-W3(3)\tP-09-BN(3)\tP-10-W0(3)\tP-10-W1(3)\tP-10-W2(3)\tP-10-W3(3)\n"
+     ]
+    }
+   ],
    "source": [
     "test = Test({}, multiple_choices + problems)\n",
     "# print(test.total_points())\n",
-    "# print('\\n'.join(test.get_grade_list()))"
+    "print('\\t'.join(test.get_grade_list()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
